15 Oct 2005:  Menelaos Karavelas
- changes towards the new design of the traits

13 Oct 2005:  Menelaos Karavelas
Testing:
- removed unnecessary function and added testing for non-default
  constructors for the Voronoi_diagram_2 class
Code:
- modified constructors of Voronoi_diagram_2 to take an instance of
  the geometric traits of the Delaunay graph.
- added type for the geometric traits of the Delaunay graph.
Documentation:
- added afore-mentioned changes in constructors and type for the
  Voronoi_diagram_2 class.

12 Oct 2005:  Menelaos Karavelas
- modified doc according to new design

11 Oct 2005:  Menelaos Karavelas
- added more testing for the Delaunay graph concept.

10 Oct 2005:  Menelaos Karavelas
- fixed bug in demo

6 Oct 2005:  Menelaos Karavelas
- modified doc to match the code; changes in the concepts according to
  Mariette's suggestions/comments
- modified testing accordingly
- added insertion methods and constructors in the DelaunayGraph_2 concept;
  The Triangulation_hierarchy_2 class is no longer a model of the concept: it
  lacks a constructor that takes an iterator range.
- added generator iterator in testsuites; generator iterator may need some
  more work. Open question: should sites be renamed to generators?

4 Oct 2005:  Menelaos Karavelas
- renamed namespace Voronoi_diagram_2_namespace to VoronoiDiagram_2
- added short names for publicly visible classes
- added Internal namespace and moved all internal code to this namespace
- modified Accessor class to provide the Find_valid_vertex functor
- added accessor method in Voronoi_diagram_2 class that returns an
  Accessor object
- changed the implementation of accessor; the accessor now stores a
  pointer to the class.

28 August 2005:  Menelaos Karavelas
- attempt to remove warning produced by ICL.EXE for the
Concrete_Voronoi_diagram_2 class.

6 August 2005:  Menelaos Karavelas
- demo: fixed the display of the conflict region for all three kinds
  of Voronoi diagrams.